tests/paczka2/big_fuzzy/90046767.err
Error in line 2: fC9gz6H S732 24,7
Error in line 20: wNQ3YZO5f2X S732 27,7
Error in line 36: bDY A128 195,3
Error in line 48: S978 A513 58,8
Error in line 65: gZSuRiDUt A128 78,7
Error in line 66: gZSuRiDUt S978 83,2
Error in line 73: DCUI A513 -3,9
Error in line 80: hQr055JS30 A513 18,4
Error in line 79: gZSuRiDUt A128 68,3
Error in line 88: S978 S732 402,4
Error in line 71: DCUI A513 42,0
Error in line 93: S978 S732 32,5
Error in line 83: fC9gz6H S732 44,2
Error in line 92: DCUI S732 12,6
Error in line 105: hQr055JS30 A128 -2,9
Error in line 115: wNQ3YZO5f2X S978 48,3
Error in line 127: gZSuRiDUt S978 -1,8
Error in line 117: S978 S978 43,1
Error in line 125: hQr055JS30 S732 97,5
Error in line 136: hQr055JS30 S978 67,1
Error in line 134: DCUI A128 22,9
Error in line 140: fC9gz6H S732 35,5
Error in line 124: gZSuRiDUt S978 23,7
Error in line 158: hQr055JS30 S732 43,3
Error in line 155: fC9gz6H S978 30,7
Error in line 172: wNQ3YZO5f2X S978 0,3
Error in line 154: S978 A513 93,0
Error in line 182: S978 S978 89,9
Error in line 163: DCUI S978 194,8
Error in line 189: fC9gz6H A128 39,4
Error in line 203: fC9gz6H S978 8,1
Error in line 209: bDY A128 35,6
Error in line 212: S978 A513 21,0
Error in line 219: DCUI S978 76,5
Error in line 233: wNQ3YZO5f2X S978 79,2
Error in line 239: gZSuRiDUt A128 43,4
